--- a/RUNT/Reporte_tecnico.Rmd
+++ b/RUNT/Reporte_tecnico.Rmd
@@ -184,11 +184,11 @@ trm <- trm %>%
 db <- merge(x = db, y = trm, by = "Fecha")
 ```
 
-# Precio del barril de petróleo Brent
+<!-- ## Precio del barril de petróleo Brent -->
 
-Colombia es un exportador neto de crudo, cuyo precio por las características del petróleo en el país está determinado por el barril Went, el cual se negocia en los mercados internacionales día y día y que, considerando la pobre capacidad del país para producir derivados como la gasolina, estos productos de valor agregado deben ser importados para poder dar abastecer la demanda nacional. Así, considerando que una de las variables que afecta el precio de la gasolina es el precio del petróleo, se va a considerar la cotización diaria de este *commodity*.
+<!-- Colombia es un exportador neto de crudo, cuyo precio por las características del petróleo en el país está determinado por el barril Went, el cual se negocia en los mercados internacionales día y día y que, considerando la pobre capacidad del país para producir derivados como la gasolina, estos productos de valor agregado deben ser importados para poder dar abastecer la demanda nacional. Así, considerando que una de las variables que afecta el precio de la gasolina es el precio del petróleo, se va a considerar la cotización diaria de este *commodity*. -->
 
-# Elementos de la fecha
+## Elementos de la fecha
 
 Para poder identificar patrones estacionarios y otros asociados con el tiempo, se van a crear las siguientes variables:
 
@@ -198,10 +198,130 @@ Para poder identificar patrones estacionarios y otros asociados con el tiempo, s
 - *Día de la semana.* Identifica el día de la semana de cada fecha (ej.: lunes, martes, miércoles, etc.)
 - *Semana del año.* Identifica la semana del año asociada a cada fecha, considerando que los primeros siete días del año siempre conformarán la primera semana sin importar el día de la semana asociado a cada uno de estos.
 
+## Días no laborales
+
+La mayoría de puntos del país donde es posible realizar un registro al RUNT solo operan en días laborales, es decir, entre el lunes y el sábado de cada semana, con la excepción de aquellos días que sean festivos, por lo que es importante identificar dichos días para que el modelo pueda incorporarlos y trabajar con ellos.
+
+```{r, include = FALSE}
+fest12 <- c("2012-01-01", "2012-01-09", "2012-03-19",
+            "2012-04-01", "2012-04-05", "2012-04-06",
+	          "2012-04-08", "2012-05-01", "2012-05-21",
+            "2012-06-11", "2012-06-18", "2012-07-02",
+            "2012-07-20", "2012-08-07", "2012-08-20",
+            "2012-10-15", "2012-11-05", "2012-11-12",
+            "2012-12-08", "2012-12-25")
+
+fest13 <- c("2013-01-01", "2013-01-07", "2013-03-24",
+            "2013-03-25", "2013-03-28", "2013-03-29",
+	          "2013-03-31", "2013-05-01", "2013-05-13",
+            "2013-06-03", "2013-06-10", "2013-07-01",
+            "2013-07-20", "2013-08-07", "2013-08-19",
+            "2013-10-14", "2013-11-04", "2013-11-11",
+            "2013-12-08", "2013-12-25")
+fest14 <- c("2014-01-01", "2014-01-06", "2014-03-24",
+             "2014-04-17", "2014-04-18", "2014-05-01",
+	           "2014-06-02", "2014-06-23", "2014-06-30",
+             "2014-07-20", "2014-08-07", "2014-08-18",
+             "2014-10-13", "2014-11-03", "2014-11-17",
+             "2014-12-08", "2014-12-25")
+fest15 <- c("2015-01-01", "2015-01-12", "2015-03-23",
+            "2015-04-02", "2015-04-03", "2015-05-01",
+        		"2015-06-08", "2015-06-15", "2015-06-29",
+        		"2015-07-20", "2015-08-07", "2015-08-17",
+        		"2015-10-12", "2015-11-02", "2015-11-16",
+        		"2015-12-08", "2015-12-25", "2015-05-18")
+fest16 <- c("2016-01-01", "2016-01-11", "2016-03-21",
+            "2016-03-24", "2016-03-25", "2016-05-01",
+        		"2016-05-30", "2016-06-06", "2016-07-04",
+        		"2016-07-20", "2016-08-07", "2016-08-15",
+        		"2016-10-17", "2016-11-07", "2016-11-14",
+        		"2016-12-08", "2016-12-25", "2016-05-09")
+
+fest17 <- c("2017-01-01", "2017-01-09", "2017-03-20",
+             "2017-04-13", "2017-04-14", "2017-05-01",
+		         "2017-05-29", "2017-06-19", "2017-07-03",
+        		 "2017-07-20", "2017-08-07", "2017-08-21",
+        		 "2017-10-16", "2017-11-06", "2017-11-13",
+        		 "2017-12-08", "2017-12-25", "2017-06-26")
+
+fest18 <- c("2018-01-01", "2018-01-08", "2018-03-19",
+            "2018-03-19", "2018-03-30", "2018-05-01",
+        		"2018-05-14", "2018-06-04", "2018-07-02",
+        		"2018-07-20", "2018-08-07", "2018-08-20",
+        		"2018-10-15", "2018-11-05", "2018-11-12",
+        		"2018-12-08", "2018-12-25", "2018-06-11")
+festivos <- c(fest12,fest13,fest14,fest15,fest16,fest17,fest18)
+festivos <- as.Date(festivos)
+db <- db %>% 
+  mutate(Festivo = ifelse((Fecha %in% festivos), 1, 0))
+```
+
+```{r}
+db <- db %>% 
+  mutate(Laboral = ifelse((Festivo == "1" | dia_semana == "1"), 0, 1)) %>% 
+  select(-c("Festivo", "Fecha"))
+```
+
+
 ```{r}
 save(db, file = "RUNT.RData")
 ```
 
+# Generación de la base de datos de 2018
+
+```{r}
+dias18 = seq(as.Date("2018-01-01"), as.Date("2018-12-31"), by="days")
+```
+
+```{r}
+yr18 = as.data.frame(dias18)
+```
+
+```{r}
+yr18 = yr18 %>% 
+  rename("Fecha" = "dias18")
+```
+
+
+```{r}
+yr18 <- yr18 %>% 
+  mutate(Fecha = as.Date(Fecha)) %>% 
+  mutate(dia = day(Fecha)) %>% 
+  mutate(mes = month(Fecha)) %>% 
+  mutate(anno = year(Fecha))%>%
+  mutate(dia_semana = wday(Fecha)) %>% 
+  mutate(semana = week(Fecha))
+```
+
+```{r}
+yr18 <- yr18 %>% 
+  mutate(Festivo = ifelse((Fecha %in% festivos), 1, 0))
+```
+
+```{r}
+trm18 = read_excel("TRM18.xlsx")
+```
+
+```{r}
+trm18 = trm18 %>% 
+  mutate(Fecha = as.Date(Fecha))
+```
+
+
+```{r}
+yr18 <- merge(x = yr18, y = trm18, by = "Fecha")
+```
+
+
+```{r}
+yr18 <- yr18 %>% 
+  mutate(Laboral = ifelse((Festivo == "1" | dia_semana == "1"), 0, 1)) %>% 
+  select(-c("Festivo", "Fecha"))
+```
+
+```{r}
+save(yr18, file = "yr18.RData")
+```
 
 # Referencias
 
