--- a/Modelos.Rmd
+++ b/Modelos.Rmd
@@ -23,6 +23,11 @@ library(caret)
 library(Metrics)
 ```
 
+```{r}
+load("./RUNT/RUNT.RData")
+```
+
+
 ## Modelo de regresion lineal
 
 
@@ -39,7 +44,7 @@ mod = lm(Unidades~.,db)
 summary(mod)
 ```
 
-Tiene un $$R_{adj}^2$$ de 0.6804.
+Tiene un $$R_{adj}^2$$ de 0.562.
 
 ```{r}
 # Gráfico de normalidad para los residuales estudentizados
@@ -57,33 +62,33 @@ Los residuales no se distribuyan normal, por lo que este modelo no cumple con lo
 
 Encontremos otros modelos...
 
-```{r, warning = FALSE, message = FALSE}
+```{r, warning = FALSE, message = FALSE, fig.width=8}
 #Todas las regresiones posibles; da información del Cp, R2, R2adj
 k=ols_step_all_possible(mod)
 format(k[, c(1:5, 7)], scientific = FALSE, digits = 4)
 plot(k)
 ```
 
-Los mejores modelos para estos criterios son el modelo 1, 7, 22, 42, 57 y 63, por el principio de parsimonia, se elige el modelo 7 y se pone aprueba si este cumple con los supuestos...
+Los mejores modelos para estos criterios son el modelo 1, 8, 29, 64, 99, 120 y 127, siguiendo el principio de parsimonia, se elige el modelo 8 y se pone a prueba si este cumple con los supuestos...
 
-#### Modelo 7
+#### Modelo 8
 
 ```{r}
-mod7 = lm(Unidades ~ dia + dia_semana, data = db)
+mod8 = lm(Unidades ~ dia + Laboral, data = db)
 ```
 
 ```{r}
-summary(mod7)
+summary(mod8)
 ```
 
 ```{r}
 # Gráfico de normalidad para los residuales estudentizados
 
-residualPlots(mod7,tests=FALSE,type="rstudent",quadratic=FALSE,col=2,cex=1.5)
-test=shapiro.test(rstudent(mod)) #Test de normalidad sobre residuales estudentizados
-qqnorm(rstudent(mod7),cex=2)
+residualPlots(mod8,tests=FALSE,type="rstudent",quadratic=FALSE,col=2,cex=1.5)
+test=shapiro.test(rstudent(mod8)) #Test de normalidad sobre residuales estudentizados
+qqnorm(rstudent(mod8),cex=2)
 
-qqline(rstudent(mod7),col=2)
+qqline(rstudent(mod8),col=2)
 legend("topleft",legend=rbind(c("Statistic W","p.value"),
 round(c(test$statistic,test$p.value),digits=5)),cex=1.2)
 ```
@@ -91,26 +96,4 @@ round(c(test$statistic,test$p.value),digits=5)),cex=1.2)
 Veamos que este modelo tampoco cumple con los supuestos de un MRLM.
 
 No se puede usar regresión en este caso.
-
-# Modelo gbm
-```{r}
-db$dia_semana = as.factor(db$dia_semana)
-db$dia = as.factor(db$dia)
-db$mes = as.factor(db$mes)
-db$anno = as.factor(db$anno)
-db$semana = as.factor(db$semana)
-```
-
-
-```{r}
-mod_gbm = gbm(Unidades ~ dia + dia_semana + mes + anno + semana, data = db, distribution = "gaussian", shrinkage = 0.3, n.trees = 100)
-```
-
-```{r}
-predichos <- predict(mod_gbm)
-```
-
-```{r}
-mape(db$Unidades,predichos)
-```
 
